# Test_Movies

./: .env-copy  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2506346c6c83_favorite_movies.py  70443b0eadc2_favorite_movies2.py  7190eb256f41_data_movies.py  850e9af34895_favorite_movies.py  b7ff7b60254b_add_user_model2.py  bde6ced9ec47_add_user_model.py
apps/: base_dao.py  config.py  database.py
apps/auth/: auth.py  jwt.py  password.py  services_auth.py
apps/certs/: private_key.pem  public_key.pem
apps/movies/: dao.py  model.py  router.py  services.py
apps/user/: dao.py  models.py  shemas.py
tests/: conftest.py  mock_users.json
tests/integtation_test/: test_auth_api.py
tests/unit_test/user_test/: test_auth_depend_def.py
