[tool.poetry]
name = "socialblog-user"
version = "0.1.0"
description = ""
authors = ["YASHALAWA8 <95289183+YASHALAWA8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
itsdangerous = "^2.2.0"
authlib = "^1.3.2"
httpx = "^0.27.2"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
aiofiles = "^24.1.0"
ruff = "^0.6.3"
faker = "^28.4.1"
mypy = "^1.11.2"
make = "^0.1.6.post2"
coverage = "^7.6.1"
aiofile = "^3.9.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = false

docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["apps/", "tests/"]    # Папка для проверки типов
ignore_missing_imports = true 